kindle higlights added on index.html 📖

--- a/index.html
+++ b/index.html
@@ -1,94 +1,125 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/images/favicon.png" />
+<head>
+    <meta charset="UTF-8"/>
+    <link rel="icon" type="image/svg+xml" href="/images/favicon.png"/>
     <link href="https://fonts.cdnfonts.com/css/montserrat" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://kit.fontawesome.com/ad41694d2d.js" crossorigin="anonymous"></script>
-    <script defer src="main.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="kindle.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Ivo Žaloudek</title>
-    
-  </head>
-  <body class="bg-[#1e1f21] text-white">
-    <nav class="flex flex-row justify-between sm:justify-around p-4 place-items-center">
-      <div><a href="/"><h1 class="font-bold text-4xl text-[#62d6ad]">Ivo</h1></a></div>
-      <div><a class="uppercase font-medium text-lg" href="./books.html">Books</a></div>
-  </nav>
-  <section id="main-words">
-  <div class="flex flex-col text-center space-y-1.5 py-10">
-  <p class="text-xl">Student at <a target="_blank" class="font-bold text-[#62d6ad] hover:underline" href="https://fis.vse.cz/magisterske-studium/magisterske-programy/ux-vyzkum-a-design-ist/">UX Research and Design</a></p>
-  <p class="text-xl">Programmer <i class="fa-solid fa-code" style="color: #62d6ad;"></i></p>
-  <p class="text-xl">Web design <i class="fa-solid fa-pencil" style="color: #62d6ad;"></i></p>
-  <p class="text-xl">Drone pilot <i class="fa-solid fa-binoculars" style="color: #62d6ad;"></i></p>
-  </div>
-</section>
-  <section id="projects">
-  <h2 class="text-2xl font-bold text-center text-[#62d6ad]">Working on:</h2>
-  <div class="flex flex-col sm:flex-row gap-y-5 items-center justify-center py-10">
-    <div class="flex flex-col gap-2">
-     <div class="flex flex-row"><p><i class="fa-solid fa-mobile pr-3 fa-xl" style="color: #62d6ad;"></i>Mobile app</p></div>
-     <div class="flex flex-row"><p><i class="fa-solid fa-pencil pr-3 fa-xl" style="color: #62d6ad;"></i>Websites</p></div>
+
+</head>
+<body class="bg-[#1e1f21] text-white">
+<nav class="flex flex-row justify-between sm:justify-around p-4 place-items-center">
+    <div><a href="/"><h1 class="font-bold text-4xl text-[#62d6ad]">Ivo</h1></a></div>
+    <div><a class="uppercase font-medium text-lg" href="./books.html">Books</a></div>
+</nav>
+<section id="main-words">
+    <div class="flex flex-col text-center space-y-1.5 py-10">
+        <p class="text-xl">Student at <a target="_blank" class="font-bold text-[#62d6ad] hover:underline"
+                                         href="https://fis.vse.cz/magisterske-studium/magisterske-programy/ux-vyzkum-a-design-ist/">UX
+            Research and Design</a></p>
+        <p class="text-xl">Programmer <i class="fa-solid fa-code" style="color: #62d6ad;"></i></p>
+        <p class="text-xl">Web design <i class="fa-solid fa-pencil" style="color: #62d6ad;"></i></p>
+        <p class="text-xl">Drone pilot <i class="fa-solid fa-binoculars" style="color: #62d6ad;"></i></p>
     </div>
-  </div>
 </section>
-    <section id="interests">
-        <h2 class="text-2xl font-bold text-center text-[#62d6ad]">Interests</h2>
-      <div class="flex sm:flex-row flex-col  items-center justify-center gap-5 py-10">
+<section id="projects">
+    <h2 class="text-2xl font-bold text-center text-[#62d6ad]">Working on:</h2>
+    <div class="flex flex-col sm:flex-row gap-y-5 items-center justify-center py-10">
+        <div class="flex flex-col gap-2">
+            <div class="flex flex-row"><p><i class="fa-solid fa-mobile pr-3 fa-xl" style="color: #62d6ad;"></i>Mobile
+                app</p></div>
+            <div class="flex flex-row"><p><i class="fa-solid fa-pencil pr-3 fa-xl" style="color: #62d6ad;"></i>Websites
+            </p></div>
+        </div>
+    </div>
+</section>
+<section id="interests">
+    <h2 class="text-2xl font-bold text-center text-[#62d6ad]">Interests</h2>
+    <div class="flex sm:flex-row flex-col items-center justify-center gap-5 py-10">
         <div class="group h-96 w-80 [perspective:1000px]">
-          <div class="relative h-full w-full rounded-md transition-all duration-500 [transform-style:preserve-3d] sm:group-active:[transform:rotateY(180deg)] group-hover:[transform:rotateY(180deg)]">
-            <div class="absolute inset-0">
-              <img class="h-full w-full rounded-xl object-cover shadow-xl shadow-black/40" src="https://images.unsplash.com/photo-1506880018603-83d5b814b5a6?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1548&q=80" alt="person holding a book"/>
+            <div class="relative h-full w-full rounded-md transition-all duration-500 [transform-style:preserve-3d] sm:group-active:[transform:rotateY(180deg)] group-hover:[transform:rotateY(180deg)]">
+                <div class="absolute inset-0">
+                    <img class="h-full w-full rounded-xl object-cover shadow-xl shadow-black/40"
+                         src="https://images.unsplash.com/photo-1506880018603-83d5b814b5a6?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1548&q=80"
+                         alt="person holding a book"/>
+                </div>
+                <div class="absolute inset-0 h-full w-full rounded-md bg-[#dca11d] px-12 text-center text-slate-200 [transform:rotateY(180deg)] [backface-visibility:hidden]">
+                    <div class="flex min-h-full flex-col items-center justify-center">
+                        <p class="text-xl">I used to hate reading</p>
+                        <p class="text-xl">but I changed my mind.</p>
+                    </div>
+                </div>
             </div>
-            <div class="absolute inset-0 h-full w-full rounded-md bg-[#dca11d] px-12 text-center text-slate-200 [transform:rotateY(180deg)] [backface-visibility:hidden]">
-              <div class="flex min-h-full flex-col items-center justify-center">
-                <p class="text-xl">I used to hate reading</p>
-                <p class="text-xl">but I changed my mind.</p>
-              </div>
-            </div>
-          </div>
         </div>
         <div class="group h-96 w-80 [perspective:1000px]">
-          <div class="relative h-full w-full rounded-md transition-all duration-500 [transform-style:preserve-3d] sm:group-active:[transform:rotateY(180deg)] group-hover:[transform:rotateY(180deg)]">
-            <div class="absolute inset-0">
-              <img class="h-full w-full rounded-xl object-cover shadow-xl shadow-black/40" src="https://images.unsplash.com/photo-1553165558-424ffa9c4303?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="drone" />
+            <div class="relative h-full w-full rounded-md transition-all duration-500 [transform-style:preserve-3d] sm:group-active:[transform:rotateY(180deg)] group-hover:[transform:rotateY(180deg)]">
+                <div class="absolute inset-0">
+                    <img class="h-full w-full rounded-xl object-cover shadow-xl shadow-black/40"
+                         src="https://images.unsplash.com/photo-1553165558-424ffa9c4303?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80"
+                         alt="drone"/>
+                </div>
+                <div class="absolute inset-0 h-full w-full rounded-md bg-[#3F79AD] px-12 text-center text-slate-200 [transform:rotateY(180deg)] [backface-visibility:hidden]">
+                    <div class="flex min-h-full flex-col items-center justify-center">
+                        <p class="text-xl">Flying drones for fun (Mavic 2 Pro)</p>
+                        <p class="text-xl">A2 Certification</p>
+                    </div>
+                </div>
             </div>
-            <div class="absolute inset-0 h-full w-full rounded-md bg-[#3F79AD] px-12 text-center text-slate-200 [transform:rotateY(180deg)] [backface-visibility:hidden]">
-              <div class="flex min-h-full flex-col items-center justify-center">
-                <p class="text-xl">Flying drones for fun (Mavic 2 Pro)</p>
-                <p class="text-xl">A2 Certification</p>
-              </div>
-            </div>
-          </div>
         </div>
-      </div>
-    </section>
-  <section id="books">
+    </div>
+</section>
+<section>
+    <h3 class="text-xl font-bold text-center text-[#62d6ad]">Kindle Higlights</h3>
+    <div class="target max-w-lg px-10 py-10 mx-auto text-lg italic"></div>
+</section>
+<section id="books">
     <h4 class="text-xl font-bold text-center text-[#62d6ad]">Best books I recently read</h4>
-  <div class="flex flex-col flex-wrap w-1100 text-center py-10 sm:flex-row justify-center items-center gap-2">
-    <a class="book-img" target="_blank" href="https://www.goodreads.com/book/show/840.The_Design_of_Everyday_Things"><img src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1442460745i/840.jpg" alt="Design of Everyday Things book" height="250" width="250"></a>
-    <a class="book-img" target="_blank" href="https://www.goodreads.com/book/show/136251.Harry_Potter_and_the_Deathly_Hallows"><img src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1663805647i/136251.jpg" alt="Harry Potter and deathly hallows book" height="250" width="250"></a>
-    <a target="_blank" href="https://www.goodreads.com/book/show/53485286-lady-of-the-lake"><img src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1590429403i/53485286.jpg" alt="The Witcher - Lady of the Lake book" height="250" width="250"></a>
-    <a target="_blank" href="https://www.goodreads.com/book/show/9969571-ready-player-one"><img src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1500930947i/9969571.jpg" alt="Ready player one book" height="250" width="250"></a>
-  </div>
+    <div class="flex flex-col flex-wrap w-1100 text-center py-10 sm:flex-row justify-center items-center gap-2">
+        <a class="book-img" target="_blank"
+           href="https://www.goodreads.com/book/show/840.The_Design_of_Everyday_Things"><img
+                src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1442460745i/840.jpg"
+                alt="Design of Everyday Things book" height="250" width="250"></a>
+        <a class="book-img" target="_blank"
+           href="https://www.goodreads.com/book/show/136251.Harry_Potter_and_the_Deathly_Hallows"><img
+                src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1663805647i/136251.jpg"
+                alt="Harry Potter and deathly hallows book" height="250" width="250"></a>
+        <a target="_blank" href="https://www.goodreads.com/book/show/53485286-lady-of-the-lake"><img
+                src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1590429403i/53485286.jpg"
+                alt="The Witcher - Lady of the Lake book" height="250" width="250"></a>
+        <a target="_blank" href="https://www.goodreads.com/book/show/9969571-ready-player-one"><img
+                src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1500930947i/9969571.jpg"
+                alt="Ready player one book" height="250" width="250"></a>
+    </div>
 </section>
 <section id="vibe">
-<div class="w-1100 flex flex-col text-center content-center py-15 space-y-1.5">
-  <h5 class="text-lg font-bold text-[#62d6ad]">Currently vibing to</h5>
-  <div class="w-1100 flex flex-row justify-center">
-    <iframe class="rounded-md" width="560" height="315" src="https://www.youtube.com/embed/4nvewes8Inc?si=f81wraD5r88YZ-ym&amp;controls=0" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-  </div>
-</div>
+    <div class="w-1100 flex flex-col text-center content-center py-15 space-y-1.5">
+        <h5 class="text-lg font-bold text-[#62d6ad]">Currently vibing to</h5>
+        <div class="w-1100 flex flex-row justify-center">
+            <iframe class="rounded-md" width="560" height="315"
+                    src="https://www.youtube.com/embed/4nvewes8Inc?si=f81wraD5r88YZ-ym&amp;controls=0"
+                    title="YouTube video player"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
+        </div>
+    </div>
 </section>
 <footer>
-<div class="flex space-x-5 items-center justify-center w-1100 py-8">
-<a target="_blank" href="https://www.linkedin.com/in/ivo-%C5%BEaloudek-18a394216/"><i class="fa-brands fa-linkedin fa-2xl text-[#62d6ad] hover:-translate-y-2 hover:scale-110 duration-300"></i></a>
-<a target="_blank" href="https://github.com/zalivo"><i class="fa-brands fa-github fa-2xl text-[#62d6ad] hover:-translate-y-2 hover:scale-110 duration-300"></i></a>
-<a target="_blank" href="https://www.goodreads.com/user/show/150361888-ivo-aloudek"><i class="fa-brands fa-goodreads fa-2xl text-[#62d6ad] hover:-translate-y-2 hover:scale-110 duration-300"></i></a>
-<a target="_blank" href="https://medium.com/@izaloudek5"><i class="fa-brands fa-medium fa-2xl text-[#62d6ad] hover:-translate-y-2 hover:scale-110 duration-300"></i></a>
-</div>
+    <div class="flex space-x-5 items-center justify-center w-1100 py-8">
+        <a target="_blank" href="https://www.linkedin.com/in/ivo-%C5%BEaloudek-18a394216/"><i
+                class="fa-brands fa-linkedin fa-2xl text-[#62d6ad] hover:-translate-y-2 hover:scale-110 duration-300"></i></a>
+        <a target="_blank" href="https://github.com/zalivo"><i
+                class="fa-brands fa-github fa-2xl text-[#62d6ad] hover:-translate-y-2 hover:scale-110 duration-300"></i></a>
+        <a target="_blank" href="https://www.goodreads.com/user/show/150361888-ivo-aloudek"><i
+                class="fa-brands fa-goodreads fa-2xl text-[#62d6ad] hover:-translate-y-2 hover:scale-110 duration-300"></i></a>
+        <a target="_blank" href="https://medium.com/@izaloudek5"><i
+                class="fa-brands fa-medium fa-2xl text-[#62d6ad] hover:-translate-y-2 hover:scale-110 duration-300"></i></a>
+    </div>
 </footer>
+<script>window.renderHighlight('.target');</script>
 </body>
 </html>
