--- a/books.html
+++ b/books.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://kit.fontawesome.com/ad41694d2d.js" crossorigin="anonymous"></script>
-    <script defer src="main.js"></script>
+    <script defer src="kindle.js"></script>
 <title>Books | Ivo Žaloudek</title>
 </head>
 <body class="bg-[#1e1f21] text-white">
