added from which book the highlight is

--- a/index.html
+++ b/index.html
@@ -73,12 +73,8 @@
         </div>
     </div>
 </section>
-<section>
-    <h3 class="text-xl font-bold text-center text-[#62d6ad]">Kindle Higlights</h3>
-    <div class="target max-w-lg px-10 py-10 mx-auto text-lg italic"></div>
-</section>
 <section id="books">
-    <h4 class="text-xl font-bold text-center text-[#62d6ad]">Best books I recently read</h4>
+    <h3 class="text-xl font-bold text-center text-[#62d6ad]">Best books I recently read</h3>
     <div class="flex flex-col flex-wrap w-1100 text-center py-10 sm:flex-row justify-center items-center gap-2">
         <a class="book-img" target="_blank"
            href="https://www.goodreads.com/book/show/840.The_Design_of_Everyday_Things"><img
@@ -95,6 +91,10 @@
                 src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1500930947i/9969571.jpg"
                 alt="Ready player one book" height="250" width="250"></a>
     </div>
+</section>
+<section>
+    <h4 class="text-xl font-bold text-center text-[#62d6ad]">Kindle Higlights</h4>
+    <div class="target flex flex-col gap-5 max-w-lg px-10 py-10 mx-auto text-lg italic"></div>
 </section>
 <section id="vibe">
     <div class="w-1100 flex flex-col text-center content-center py-15 space-y-1.5">
