--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
     <h2 class="text-2xl font-bold text-center text-[#62d6ad]">Working on:</h2>
     <div class="flex flex-col sm:flex-row gap-y-5 items-center justify-center py-10">
         <div class="flex flex-col gap-2">
+            <div class="flex flex-row"><p><i class="fa-brands fa-react pr-3 fa-xl" style="color: #62d6ad;"></i>Learning
+                React
+            </p></div>
+            <div class="flex flex-row"><p><i class="fa-brands fa-webflow pr-3 fa-xl" style="color: #62d6ad;"></i>Webflow
+                Masterclass
+            </p></div>
             <div class="flex flex-row"><p><i class="fa-solid fa-mobile pr-3 fa-xl" style="color: #62d6ad;"></i>Mobile
                 app</p></div>
             <div class="flex flex-row"><p><i class="fa-solid fa-pencil pr-3 fa-xl" style="color: #62d6ad;"></i>Websites
