code format + book changed

--- a/index.html
+++ b/index.html
@@ -31,13 +31,11 @@
     <h2 class="text-2xl font-bold text-center text-[#62d6ad]">Working on:</h2>
     <div class="flex flex-col sm:flex-row gap-y-5 items-center justify-center py-10">
         <div class="flex flex-col gap-2">
-            <div class="flex flex-row"><p><i class="fa-brands fa-react pr-3 fa-xl" style="color: #62d6ad;"></i>Learning
-                React
+            <div class="flex flex-row"><p><i class="fa-brands fa-react pr-5 fa-xl" style="color: #62d6ad;"></i>React
             </p></div>
-            <div class="flex flex-row"><p><i class="fa-brands fa-webflow pr-3 fa-xl" style="color: #62d6ad;"></i>Webflow
-                Masterclass
+            <div class="flex flex-row"><p><i class="fa-brands fa-webflow pr-5 fa-xl" style="color: #62d6ad;"></i>Webflow
             </p></div>
-            <div class="flex flex-row"><p><i class="fa-solid fa-pencil pr-3 fa-xl" style="color: #62d6ad;"></i>Websites
+            <div class="flex flex-row"><p><i class="fa-solid fa-pencil pr-5 fa-xl" style="color: #62d6ad;"></i>Websites
             </p></div>
         </div>
     </div>
@@ -79,25 +77,26 @@
 </section>
 <section id="books">
     <h3 class="text-xl font-bold text-center text-[#62d6ad]">Best books I recently read</h3>
-    <div class="flex flex-col flex-wrap w-1100 text-center py-10 sm:flex-row justify-center items-center gap-2">
+    <div class="flex flex-col flex-wrap max-w-full text-center py-10 sm:flex-row justify-center items-center gap-2">
         <a class="book-img" target="_blank"
-           href="https://www.goodreads.com/book/show/840.The_Design_of_Everyday_Things"><img
-                src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1442460745i/840.jpg"
-                alt="Design of Everyday Things book" height="250" width="250"></a>
+           href="https://www.goodreads.com/book/show/17255186-the-phoenix-project"><img
+                src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1361113128i/17255186.jpg"
+                alt="The Phoenix Project: A Novel About IT, DevOps, and Helping Your Business Win book" height="250"
+                width="250"></a>
         <a class="book-img" target="_blank"
            href="https://www.goodreads.com/book/show/136251.Harry_Potter_and_the_Deathly_Hallows"><img
                 src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1663805647i/136251.jpg"
                 alt="Harry Potter and deathly hallows book" height="250" width="250"></a>
-        <a target="_blank" href="https://www.goodreads.com/book/show/53485286-lady-of-the-lake"><img
+        <a class="book-img" target="_blank" href="https://www.goodreads.com/book/show/53485286-lady-of-the-lake"><img
                 src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1590429403i/53485286.jpg"
                 alt="The Witcher - Lady of the Lake book" height="250" width="250"></a>
-        <a target="_blank" href="https://www.goodreads.com/book/show/9969571-ready-player-one"><img
+        <a class="book-img" target="_blank" href="https://www.goodreads.com/book/show/9969571-ready-player-one"><img
                 src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1500930947i/9969571.jpg"
                 alt="Ready player one book" height="250" width="250"></a>
     </div>
 </section>
 <section>
-    <h4 class="text-xl font-bold text-center text-[#62d6ad]">Kindle Higlights</h4>
+    <h4 class="text-lg font-bold text-center text-[#62d6ad]">Kindle Higlights</h4>
     <div class="target flex flex-col gap-5 max-w-lg px-10 py-10 mx-auto text-lg italic"></div>
 </section>
 <section id="vibe">
