--- a/books.html
+++ b/books.html
@@ -19,6 +19,14 @@
 <section id="books">
     <h1 class="text-5xl font-bold text-center text-[#62d6ad] py-10">Best books I read in</h1>
     <h4 class="text-3xl font-bold text-center text-[#62d6ad]"><i class="fa-regular fa-calendar"
+                                                                 style="color: #62d6ad;"></i> 2024</h4>
+    <div class="flex flex-col flex-wrap w-1100 text-center py-10 sm:flex-row justify-center items-center gap-2">
+        <a class="book-img" target="_blank"
+           href="https://www.goodreads.com/book/show/17255186-the-phoenix-project"><img
+                src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1361113128i/17255186.jpg"
+                alt="The Phoenix Project: A Novel About IT, DevOps, and Helping Your Business Win book" height="250"
+                width="250"></a></div>
+    <h4 class="text-3xl font-bold text-center text-[#62d6ad]"><i class="fa-regular fa-calendar"
                                                                  style="color: #62d6ad;"></i> 2023</h4>
     <div class="flex flex-col flex-wrap w-1100 text-center py-10 sm:flex-row justify-center items-center gap-2">
         <a class="book-img" target="_blank"
