--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8"/>
-    <link rel="icon" type="image/svg+xml" href="/images/favicon.png"/>
+    <link href="/images/favicon.png" rel="icon" type="image/svg+xml"/>
     <link href="https://fonts.cdnfonts.com/css/montserrat" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link href="style.css" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://kit.fontawesome.com/ad41694d2d.js" crossorigin="anonymous"></script>
+    <script crossorigin="anonymous" src="https://kit.fontawesome.com/ad41694d2d.js"></script>
     <script src="kindle.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <title>Ivo Žaloudek</title>
 
 </head>
@@ -19,8 +19,9 @@
 </nav>
 <section id="main-words">
     <div class="flex flex-col text-center space-y-1.5 py-10">
-        <p class="text-xl">Student at <a target="_blank" class="font-bold text-[#62d6ad] hover:underline"
-                                         href="https://fis.vse.cz/magisterske-studium/magisterske-programy/ux-vyzkum-a-design-ist/">UX
+        <p class="text-xl">Student at <a class="font-bold text-[#62d6ad] hover:underline"
+                                         href="https://fis.vse.cz/magisterske-studium/magisterske-programy/ux-vyzkum-a-design-ist/"
+                                         target="_blank">UX
             Research and Design</a></p>
         <p class="text-xl">Programmer <i class="fa-solid fa-code" style="color: #62d6ad;"></i></p>
         <p class="text-xl">Web design <i class="fa-solid fa-pencil" style="color: #62d6ad;"></i></p>
@@ -46,9 +47,9 @@
         <div class="group h-96 w-80 [perspective:1000px]">
             <div class="relative h-full w-full rounded-md transition-all duration-500 [transform-style:preserve-3d] sm:group-active:[transform:rotateY(180deg)] group-hover:[transform:rotateY(180deg)]">
                 <div class="absolute inset-0">
-                    <img class="h-full w-full rounded-xl object-cover shadow-xl shadow-black/40"
-                         src="https://images.unsplash.com/photo-1506880018603-83d5b814b5a6?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1548&q=80"
-                         alt="person holding a book"/>
+                    <img alt="person holding a book"
+                         class="h-full w-full rounded-xl object-cover shadow-xl shadow-black/40"
+                         src="https://images.unsplash.com/photo-1506880018603-83d5b814b5a6?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1548&q=80"/>
                 </div>
                 <div class="absolute inset-0 h-full w-full rounded-md bg-[#dca11d] px-12 text-center text-slate-200 [transform:rotateY(180deg)] [backface-visibility:hidden]">
                     <div class="flex min-h-full flex-col items-center justify-center">
@@ -61,9 +62,9 @@
         <div class="group h-96 w-80 [perspective:1000px]">
             <div class="relative h-full w-full rounded-md transition-all duration-500 [transform-style:preserve-3d] sm:group-active:[transform:rotateY(180deg)] group-hover:[transform:rotateY(180deg)]">
                 <div class="absolute inset-0">
-                    <img class="h-full w-full rounded-xl object-cover shadow-xl shadow-black/40"
-                         src="https://images.unsplash.com/photo-1553165558-424ffa9c4303?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80"
-                         alt="drone"/>
+                    <img alt="drone"
+                         class="h-full w-full rounded-xl object-cover shadow-xl shadow-black/40"
+                         src="https://images.unsplash.com/photo-1553165558-424ffa9c4303?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80"/>
                 </div>
                 <div class="absolute inset-0 h-full w-full rounded-md bg-[#3F79AD] px-12 text-center text-slate-200 [transform:rotateY(180deg)] [backface-visibility:hidden]">
                     <div class="flex min-h-full flex-col items-center justify-center">
@@ -78,21 +79,29 @@
 <section id="books">
     <h3 class="text-xl font-bold text-center text-[#62d6ad]">Best books I recently read</h3>
     <div class="flex flex-col flex-wrap max-w-full text-center py-10 sm:flex-row justify-center items-center gap-2">
-        <a class="book-img" target="_blank"
-           href="https://www.goodreads.com/book/show/17255186-the-phoenix-project"><img
+        <a class="book-img" href="https://www.goodreads.com/book/show/17255186-the-phoenix-project"
+           target="_blank"><img
+                alt="The Phoenix Project: A Novel About IT, DevOps, and Helping Your Business Win book"
+                height="250"
                 src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1361113128i/17255186.jpg"
-                alt="The Phoenix Project: A Novel About IT, DevOps, and Helping Your Business Win book" height="250"
                 width="250"></a>
-        <a class="book-img" target="_blank"
-           href="https://www.goodreads.com/book/show/136251.Harry_Potter_and_the_Deathly_Hallows"><img
+        <a class="book-img" href="https://www.goodreads.com/book/show/136251.Harry_Potter_and_the_Deathly_Hallows"
+           target="_blank"><img
+                alt="Harry Potter and deathly hallows book"
+                height="250"
                 src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1663805647i/136251.jpg"
-                alt="Harry Potter and deathly hallows book" height="250" width="250"></a>
-        <a class="book-img" target="_blank" href="https://www.goodreads.com/book/show/53485286-lady-of-the-lake"><img
+                width="250"></a>
+        <a class="book-img" href="https://www.goodreads.com/book/show/53485286-lady-of-the-lake"
+           target="_blank"><img
+                alt="The Witcher - Lady of the Lake book"
+                height="250"
                 src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1590429403i/53485286.jpg"
-                alt="The Witcher - Lady of the Lake book" height="250" width="250"></a>
-        <a class="book-img" target="_blank" href="https://www.goodreads.com/book/show/9969571-ready-player-one"><img
+                width="250"></a>
+        <a class="book-img" href="https://www.goodreads.com/book/show/9969571-ready-player-one" target="_blank"><img
+                alt="Ready player one book"
+                height="250"
                 src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1500930947i/9969571.jpg"
-                alt="Ready player one book" height="250" width="250"></a>
+                width="250"></a>
     </div>
 </section>
 <section>
@@ -103,23 +112,24 @@
     <div class="w-1100 flex flex-col text-center content-center py-15 space-y-1.5">
         <h5 class="text-lg font-bold text-[#62d6ad]">Currently vibing to</h5>
         <div class="w-1100 flex flex-row justify-center">
-            <iframe class="rounded-md" width="560" height="315"
+            <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen class="rounded-md"
+                    height="315"
                     src="https://www.youtube.com/embed/4nvewes8Inc?si=f81wraD5r88YZ-ym&amp;controls=0"
                     title="YouTube video player"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                    allowfullscreen></iframe>
+                    width="560"></iframe>
         </div>
     </div>
 </section>
 <footer>
     <div class="flex space-x-5 items-center justify-center w-1100 py-8">
-        <a target="_blank" href="https://www.linkedin.com/in/ivo-%C5%BEaloudek-18a394216/"><i
+        <a href="https://www.linkedin.com/in/ivo-%C5%BEaloudek-18a394216/" target="_blank"><i
                 class="fa-brands fa-linkedin fa-2xl text-[#62d6ad] hover:-translate-y-2 hover:scale-110 duration-300"></i></a>
-        <a target="_blank" href="https://github.com/zalivo"><i
+        <a href="https://github.com/zalivo" target="_blank"><i
                 class="fa-brands fa-github fa-2xl text-[#62d6ad] hover:-translate-y-2 hover:scale-110 duration-300"></i></a>
-        <a target="_blank" href="https://www.goodreads.com/user/show/150361888-ivo-aloudek"><i
+        <a href="https://www.goodreads.com/user/show/150361888-ivo-aloudek" target="_blank"><i
                 class="fa-brands fa-goodreads fa-2xl text-[#62d6ad] hover:-translate-y-2 hover:scale-110 duration-300"></i></a>
-        <a target="_blank" href="https://medium.com/@izaloudek5"><i
+        <a href="https://medium.com/@izaloudek5" target="_blank"><i
                 class="fa-brands fa-medium fa-2xl text-[#62d6ad] hover:-translate-y-2 hover:scale-110 duration-300"></i></a>
     </div>
 </footer>
