--- a/books.html
+++ b/books.html
@@ -37,7 +37,7 @@
 
     <div class="flex flex-col flex-wrap w-1100 text-center py-10 sm:flex-row justify-center items-center gap-2 transition-fade"
          id="swup">
-        <p class="text-xl">Click they years</p>
+        <p class="text-xl">Click the years</p>
         <img alt="nerd dog" class="h-20 rounded-md" src="/images/nerd.png">
     </div>
 </section>
