--- a/index.html
+++ b/index.html
@@ -19,10 +19,9 @@
 </nav>
 <section id="main-words">
     <div class="flex flex-col text-center space-y-1.5 py-10">
-        <p class="text-xl">Student at <a class="font-bold text-[#62d6ad] hover:underline"
-                                         href="https://fis.vse.cz/magisterske-studium/magisterske-programy/ux-vyzkum-a-design-ist/"
-                                         target="_blank">UX
-            Research and Design</a></p>
+        <p class="text-xl">Student at <a class="font-bold text-[#62d6ad] underline"
+                                         href="https://www.utwente.nl/"
+                                         target="_blank">UT</a></p>
         <p class="text-xl">Programmer <i class="fa-solid fa-code" style="color: #62d6ad;"></i></p>
         <p class="text-xl">Web design <i class="fa-solid fa-pencil" style="color: #62d6ad;"></i></p>
         <p class="text-xl">Drone pilot <i class="fa-solid fa-binoculars" style="color: #62d6ad;"></i></p>
