--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="flex flex-col text-center space-y-1.5 py-10">
         <p class="text-xl">Student at <a class="font-bold text-[#62d6ad] underline"
                                          href="https://www.utwente.nl/"
-                                         target="_blank">UT</a></p>
+                                         target="_blank">I-TECH UT</a></p>
         <p class="text-xl">Programmer <i class="fa-solid fa-code" style="color: #62d6ad;"></i></p>
         <p class="text-xl">Web design <i class="fa-solid fa-pencil" style="color: #62d6ad;"></i></p>
         <p class="text-xl">Drone pilot <i class="fa-solid fa-binoculars" style="color: #62d6ad;"></i></p>
