--- a/2022.html
+++ b/2022.html
@@ -28,8 +28,9 @@
         <a href="./2023.html"><h2 class="text-2xl font-bold text-center text-[#62d6ad]"><i
                 class="fa-regular fa-calendar"
                 style="color: #62d6ad;"></i> 2023</h2></a>
-        <a href="#"><h2 class="text-2xl font-bold text-center text-[#62d6ad]"><i class="fa-regular fa-calendar"
-                                                                                 style="color: #62d6ad;"></i> 2022</h2>
+        <a href="#"><h2 class="text-2xl font-bold text-center text-[#62d6ad]"><i
+                class="fa-regular fa-calendar"
+                style="color: #62d6ad;"></i> 2022</h2>
         </a>
     </div>
 
