--- a/index.html
+++ b/index.html
@@ -22,20 +22,24 @@
         <p class="text-xl">Student at <a class="font-bold text-[#62d6ad] underline"
                                          href="https://www.utwente.nl/"
                                          target="_blank">I-TECH UT</a></p>
-        <p class="text-xl">Programmer <i class="fa-solid fa-code" style="color: #62d6ad;"></i></p>
-        <p class="text-xl">Web design <i class="fa-solid fa-pencil" style="color: #62d6ad;"></i></p>
-        <p class="text-xl">Drone pilot <i class="fa-solid fa-binoculars" style="color: #62d6ad;"></i></p>
+        <p class="text-xl">Programmer <i class="fa-solid fa-code" style="color: #62d6ad;" title="Programmer"></i></p>
+        <p class="text-xl">Web design <i class="fa-solid fa-pencil" style="color: #62d6ad;" title="Web design"></i></p>
+        <p class="text-xl">Drone pilot <i class="fa-solid fa-binoculars" style="color: #62d6ad;"
+                                          title="Drone pilot"></i></p>
     </div>
 </section>
 <section id="projects">
     <h2 class="text-2xl font-bold text-center text-[#62d6ad]">Working on:</h2>
     <div class="flex flex-col sm:flex-row gap-y-5 items-center justify-center py-10">
         <div class="flex flex-col gap-2">
-            <div class="flex flex-row"><p><i class="fa-brands fa-react pr-5 fa-xl" style="color: #62d6ad;"></i>React
+            <div class="flex flex-row"><p><i class="fa-brands fa-react pr-5 fa-xl" style="color: #62d6ad;"
+                                             title="React"></i>React
             </p></div>
-            <div class="flex flex-row"><p><i class="fa-brands fa-webflow pr-5 fa-xl" style="color: #62d6ad;"></i>Webflow
+            <div class="flex flex-row"><p><i class="fa-brands fa-webflow pr-5 fa-xl" style="color: #62d6ad;"
+                                             title="Webflow"></i>Webflow
             </p></div>
-            <div class="flex flex-row"><p><i class="fa-solid fa-pencil pr-5 fa-xl" style="color: #62d6ad;"></i>Websites
+            <div class="flex flex-row"><p><i class="fa-solid fa-pencil pr-5 fa-xl" style="color: #62d6ad;"
+                                             title="Websites"></i>Websites
             </p></div>
         </div>
     </div>
