will this fix mobile device problem?

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script crossorigin="anonymous" src="https://kit.fontawesome.com/ad41694d2d.js"></script>
     <script src="kindle.js"></script>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>Ivo Žaloudek</title>
 
 </head>
