--- a/2024.html
+++ b/2024.html
@@ -38,9 +38,9 @@
         <a class="book-img" href="https://www.goodreads.com/book/show/17255186-the-phoenix-project"
            target="_blank"><img
                 alt="The Phoenix Project: A Novel About IT, DevOps, and Helping Your Business Win book"
-                height="250" src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1361113128i/17255186.jpg"
+                height="250"
+                src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1361113128i/17255186.jpg"
                 width="250"></a></div>
 </section>
-
 </body>
 </html>
