will this work?

--- a/src/2022.html
+++ b/src/2022.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8"/>
     <link href="/images/favicon.png" rel="icon" type="image/svg+xml"/>
     <link href="https://fonts.cdnfonts.com/css/montserrat" rel="stylesheet">
-    <link href="style.css" rel="stylesheet">
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="stylesoutput.css" rel="stylesheet">
     <script crossorigin="anonymous" src="https://kit.fontawesome.com/ad41694d2d.js"></script>
     <script src="kindle.js"></script>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
@@ -22,7 +21,7 @@
 
 
     <div class="flex flex-col flex-wrap w-1100 text-center py-10 sm:flex-row justify-center items-center gap-5">
-        <a href="./2024.html"><h2 class="text-2xl font-bold text-center text-[#62d6ad]"><i
+        <a href="b2024.html"><h2 class="text-2xl font-bold text-center text-[#62d6ad]"><i
                 class="fa-regular fa-calendar"
                 style="color: #62d6ad;"></i> 2024</h2></a>
         <a href="./2023.html"><h2 class="text-2xl font-bold text-center text-[#62d6ad]"><i
