--- a/src/b2024.html
+++ b/src/b2024.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8"/>
     <link href="/images/favicon.png" rel="icon" type="image/svg+xml"/>
     <link href="https://fonts.cdnfonts.com/css/montserrat" rel="stylesheet">
-    <link href="style.css" rel="stylesheet">
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="stylesoutput.css.css" rel="stylesheet">
     <script crossorigin="anonymous" src="https://kit.fontawesome.com/ad41694d2d.js"></script>
     <script src="kindle.js"></script>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
