--- a/src/books.html
+++ b/src/books.html
@@ -5,8 +5,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <link href="/images/favicon.png" rel="icon" type="image/svg+xml"/>
     <link href="https://fonts.cdnfonts.com/css/montserrat" rel="stylesheet">
-    <link href="style.css" rel="stylesheet">
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="stylesoutput.css" rel="stylesheet">
     <script crossorigin="anonymous" src="https://kit.fontawesome.com/ad41694d2d.js"></script>
     <script defer src="kindle.js"></script>
     <script src="https://unpkg.com/swup@4"></script>
@@ -24,7 +23,7 @@
 <section id="books">
     <h1 class="text-5xl font-bold text-center text-[#62d6ad] py-10">Best books I read in</h1>
     <div class="flex flex-col flex-wrap w-1100 text-center py-10 sm:flex-row justify-center items-center gap-5">
-        <a href="./2024.html"><h2 class="text-2xl font-bold text-center text-[#62d6ad]"><i
+        <a href="b2024.html"><h2 class="text-2xl font-bold text-center text-[#62d6ad]"><i
                 class="fa-regular fa-calendar"
                 style="color: #62d6ad;"></i> 2024</h2></a>
         <a href="./2023.html"><h2 class="text-2xl font-bold text-center text-[#62d6ad]"><i
@@ -38,19 +37,27 @@
     <div class="flex flex-col flex-wrap w-1100 text-center py-10 sm:flex-row justify-center items-center gap-2 transition-fade"
          id="swup">
         <p class="text-xl">Click on the years</p>
-        <img alt="nerd dog" class="h-20 rounded-md" src="/images/nerd.png">
+        <img alt="nerd dog" class="h-20 rounded-md" src="./images/nerd.png">
     </div>
 </section>
 <footer>
-    <div class="flex space-x-5 items-center justify-center w-1100 py-8">
-        <a href="https://www.linkedin.com/in/ivo-%C5%BEaloudek-18a394216/" target="_blank"><i
-                class="fa-brands fa-linkedin fa-2xl text-[#62d6ad] hover:-translate-y-2 hover:scale-110 duration-300"></i></a>
-        <a href="https://github.com/zalivo" target="_blank"><i
-                class="fa-brands fa-github fa-2xl text-[#62d6ad] hover:-translate-y-2 hover:scale-110 duration-300"></i></a>
-        <a href="https://www.goodreads.com/user/show/150361888-ivo-aloudek" target="_blank"><i
-                class="fa-brands fa-goodreads fa-2xl text-[#62d6ad] hover:-translate-y-2 hover:scale-110 duration-300"></i></a>
-        <a href="https://medium.com/@izaloudek5" target="_blank"><i
-                class="fa-brands fa-medium fa-2xl text-[#62d6ad] hover:-translate-y-2 hover:scale-110 duration-300"></i></a>
+    <div class="flex flex-row items-center justify-center px-5 pt-5 py-5 gap-5">
+        <div class="flex flex-col gap-3 p-5">
+            <h5>Send a message</h5>
+            <a href="mailto:izaloudek5@gmail.com">izaloudek5@gmail.com</a>
+        </div>
+        <div class="flex sm:flex-col gap-3 p-5">
+            <a href="https://www.linkedin.com/in/ivo-%C5%BEaloudek-18a394216/"><i
+                    class="fa-solid fa-arrow-right fa-rotate-by"
+                    style="--fa-rotate-angle: -45deg;"></i> LinkedIn</a>
+            <a href="https://github.com/zalivo"><i class="fa-solid fa-arrow-right fa-rotate-by"
+                                                   style="--fa-rotate-angle: -45deg;"></i> GitHub</a>
+            <a href="https://www.goodreads.com/user/show/150361888-ivo-aloudek"><i
+                    class="fa-solid fa-arrow-right fa-rotate-by"
+                    style="--fa-rotate-angle: -45deg;"></i> Goodreads</a>
+            <a href="https://medium.com/@izaloudek5"><i class="fa-solid fa-arrow-right fa-rotate-by"
+                                                        style="--fa-rotate-angle: -45deg;"></i> Medium</a>
+        </div>
     </div>
 </footer>
 </body>
