--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8"/>
     <link href="/images/favicon.png" rel="icon" type="image/svg+xml"/>
     <link href="https://fonts.cdnfonts.com/css/montserrat" rel="stylesheet">
-    <link href="./stylesoutput.css" rel="stylesheet">
+    <link href="src/stylesoutput.css" rel="stylesheet">
     <script crossorigin="anonymous" src="https://kit.fontawesome.com/ad41694d2d.js"></script>
-    <script src="kindle.js"></script>
+    <script src="src/kindle.js"></script>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>Ivo Žaloudek</title>
 
@@ -14,7 +14,7 @@
 <body class="bg-[#1e1f21] text-white">
 <nav class="flex flex-row justify-between sm:justify-around p-4 place-items-center">
     <div><a href="/"><h1 class="font-bold text-4xl text-[#62d6ad]">Ivo</h1></a></div>
-    <div><a class="uppercase font-medium text-lg" href="./books.html">Books</a></div>
+    <div><a class="uppercase font-medium text-lg" href="books.html">Books</a></div>
 </nav>
 <section id="main-words">
     <div class="flex flex-col text-center space-y-1.5 py-10">
