--- a/b2024.html
+++ b/b2024.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.cdnfonts.com/css/montserrat" rel="stylesheet">
     <link href="stylesoutput.css.css" rel="stylesheet">
     <script crossorigin="anonymous" src="https://kit.fontawesome.com/ad41694d2d.js"></script>
-    <script src="kindle.js"></script>
+    <script src="src/kindle.js"></script>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <title>2024 | Ivo Žaloudek</title>
 
@@ -14,7 +14,7 @@
 <body class="bg-[#1e1f21] text-white">
 <nav class="flex flex-row justify-between sm:justify-around p-4 place-items-center">
     <div><a href="/"><h1 class="font-bold text-4xl text-[#62d6ad]">Ivo</h1></a></div>
-    <div><a class="uppercase font-medium text-lg" href="./books.html">Books</a></div>
+    <div><a class="uppercase font-medium text-lg" href="books.html">Books</a></div>
 </nav>
 <section id="books">
     <h1 class="text-5xl font-bold text-center text-[#62d6ad] py-10">Best books I read in</h1>
@@ -24,10 +24,10 @@
         <a href="#"><h2 class="text-2xl font-bold text-center text-[#62d6ad]"><i class="fa-regular fa-calendar"
                                                                                  style="color: #62d6ad;"></i> 2024</h2>
         </a>
-        <a href="./2023.html"><h2 class="text-2xl font-bold text-center text-[#62d6ad]"><i
+        <a href="2023.html"><h2 class="text-2xl font-bold text-center text-[#62d6ad]"><i
                 class="fa-regular fa-calendar"
                 style="color: #62d6ad;"></i> 2023</h2></a>
-        <a href="./2022.html"><h2 class="text-2xl font-bold text-center text-[#62d6ad]"><i
+        <a href="2022.html"><h2 class="text-2xl font-bold text-center text-[#62d6ad]"><i
                 class="fa-regular fa-calendar"
                 style="color: #62d6ad;"></i> 2022</h2></a>
     </div>
