--- a/books.html
+++ b/books.html
@@ -5,9 +5,9 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <link href="/images/favicon.png" rel="icon" type="image/svg+xml"/>
     <link href="https://fonts.cdnfonts.com/css/montserrat" rel="stylesheet">
-    <link href="stylesoutput.css" rel="stylesheet">
+    <link href="src/stylesoutput.css" rel="stylesheet">
     <script crossorigin="anonymous" src="https://kit.fontawesome.com/ad41694d2d.js"></script>
-    <script defer src="kindle.js"></script>
+    <script defer src="src/kindle.js"></script>
     <script src="https://unpkg.com/swup@4"></script>
     <script>
         const swup = new Swup();
@@ -26,10 +26,10 @@
         <a href="b2024.html"><h2 class="text-2xl font-bold text-center text-[#62d6ad]"><i
                 class="fa-regular fa-calendar"
                 style="color: #62d6ad;"></i> 2024</h2></a>
-        <a href="./2023.html"><h2 class="text-2xl font-bold text-center text-[#62d6ad]"><i
+        <a href="2023.html"><h2 class="text-2xl font-bold text-center text-[#62d6ad]"><i
                 class="fa-regular fa-calendar"
                 style="color: #62d6ad;"></i> 2023</h2></a>
-        <a href="./2022.html"><h2 class="text-2xl font-bold text-center text-[#62d6ad]"><i
+        <a href="2022.html"><h2 class="text-2xl font-bold text-center text-[#62d6ad]"><i
                 class="fa-regular fa-calendar"
                 style="color: #62d6ad;"></i> 2022</h2></a>
     </div>
@@ -37,7 +37,7 @@
     <div class="flex flex-col flex-wrap w-1100 text-center py-10 sm:flex-row justify-center items-center gap-2 transition-fade"
          id="swup">
         <p class="text-xl">Click on the years</p>
-        <img alt="nerd dog" class="h-20 rounded-md" src="./images/nerd.png">
+        <img alt="nerd dog" class="h-20 rounded-md" src="src/images/nerd.png">
     </div>
 </section>
 <footer>
