--- a/2023.html
+++ b/2023.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8"/>
-    <link href="/images/favicon.png" rel="icon" type="image/svg+xml"/>
+    <link href="src/images/favicon.png" rel="icon" type="image/svg+xml"/>
     <link href="https://fonts.cdnfonts.com/css/montserrat" rel="stylesheet">
     <link href="src/stylesoutput.css" rel="stylesheet">
     <script crossorigin="anonymous" src="https://kit.fontawesome.com/ad41694d2d.js"></script>
@@ -21,7 +21,7 @@
 
 
     <div class="flex flex-col flex-wrap w-1100 text-center py-10 sm:flex-row justify-center items-center gap-5">
-        <a href="b2024.html"><h2 class="text-2xl font-bold text-center text-[#62d6ad]"><i
+        <a href="2024.html"><h2 class="text-2xl font-bold text-center text-[#62d6ad]"><i
                 class="fa-regular fa-calendar"
                 style="color: #62d6ad;"></i> 2024</h2></a>
         <a href="#"><h2 class="text-2xl font-bold text-center text-[#62d6ad]"><i class="fa-regular fa-calendar"
