--- a/2024.html
+++ b/2024.html
@@ -2,9 +2,9 @@
 <html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8"/>
-    <link href="/images/favicon.png" rel="icon" type="image/svg+xml"/>
+    <link href="src/images/favicon.png" rel="icon" type="image/svg+xml"/>
     <link href="https://fonts.cdnfonts.com/css/montserrat" rel="stylesheet">
-    <link href="stylesoutput.css.css" rel="stylesheet">
+    <link href="src/stylesoutput.css" rel="stylesheet">
     <script crossorigin="anonymous" src="https://kit.fontawesome.com/ad41694d2d.js"></script>
     <script src="src/kindle.js"></script>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
