--- a/books.html
+++ b/books.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <link href="/images/favicon.png" rel="icon" type="image/svg+xml"/>
+    <link href="src/images/favicon.png" rel="icon" type="image/svg+xml"/>
     <link href="https://fonts.cdnfonts.com/css/montserrat" rel="stylesheet">
     <link href="src/stylesoutput.css" rel="stylesheet">
     <script crossorigin="anonymous" src="https://kit.fontawesome.com/ad41694d2d.js"></script>
@@ -23,7 +23,7 @@
 <section id="books">
     <h1 class="text-5xl font-bold text-center text-[#62d6ad] py-10">Best books I read in</h1>
     <div class="flex flex-col flex-wrap w-1100 text-center py-10 sm:flex-row justify-center items-center gap-5">
-        <a href="b2024.html"><h2 class="text-2xl font-bold text-center text-[#62d6ad]"><i
+        <a href="2024.html"><h2 class="text-2xl font-bold text-center text-[#62d6ad]"><i
                 class="fa-regular fa-calendar"
                 style="color: #62d6ad;"></i> 2024</h2></a>
         <a href="2023.html"><h2 class="text-2xl font-bold text-center text-[#62d6ad]"><i
