--- a/books.html
+++ b/books.html
@@ -41,22 +41,24 @@
     </div>
 </section>
 <footer>
-    <div class="flex flex-row items-center justify-center px-5 pt-5 py-5 gap-5">
+    <div class="flex flex-col sm:flex-row items-center justify-center px-5 pt-5 py-5 gap-5">
         <div class="flex flex-col gap-3 p-5">
             <h5>Send a message</h5>
             <a href="mailto:izaloudek5@gmail.com">izaloudek5@gmail.com</a>
         </div>
-        <div class="flex sm:flex-col gap-3 p-5">
-            <a href="https://www.linkedin.com/in/ivo-%C5%BEaloudek-18a394216/"><i
-                    class="fa-solid fa-arrow-right fa-rotate-by"
+        <div class="flex flex-col gap-3 p-5">
+            <a href="https://www.linkedin.com/in/ivo-%C5%BEaloudek-18a394216/" target="_blank"><i
+                    class="fa-solid fa-arrow-right fa-rotate-by text-[#62d6ad]"
                     style="--fa-rotate-angle: -45deg;"></i> LinkedIn</a>
-            <a href="https://github.com/zalivo"><i class="fa-solid fa-arrow-right fa-rotate-by"
-                                                   style="--fa-rotate-angle: -45deg;"></i> GitHub</a>
-            <a href="https://www.goodreads.com/user/show/150361888-ivo-aloudek"><i
-                    class="fa-solid fa-arrow-right fa-rotate-by"
+            <a href="https://github.com/zalivo" target="_blank"><i
+                    class="fa-solid fa-arrow-right fa-rotate-by text-[#62d6ad]"
+                    style="--fa-rotate-angle: -45deg;"></i> GitHub</a>
+            <a href="https://www.goodreads.com/user/show/150361888-ivo-aloudek" target="_blank"><i
+                    class="fa-solid fa-arrow-right fa-rotate-by text-[#62d6ad]"
                     style="--fa-rotate-angle: -45deg;"></i> Goodreads</a>
-            <a href="https://medium.com/@izaloudek5"><i class="fa-solid fa-arrow-right fa-rotate-by"
-                                                        style="--fa-rotate-angle: -45deg;"></i> Medium</a>
+            <a href="https://medium.com/@izaloudek5" target="_blank"><i
+                    class="fa-solid fa-arrow-right fa-rotate-by text-[#62d6ad]"
+                    style="--fa-rotate-angle: -45deg;"></i> Medium</a>
         </div>
     </div>
 </footer>
