--- a/index.html
+++ b/index.html
@@ -123,12 +123,12 @@
     </div>
 </section>
 <footer>
-    <div class="flex flex-row items-center justify-center px-5 pt-5 py-5 gap-5">
+    <div class="flex flex-col sm:flex-row items-center justify-center px-5 pt-5 py-5 gap-5">
         <div class="flex flex-col gap-3 p-5">
             <h5>Send a message</h5>
             <a href="mailto:izaloudek5@gmail.com">izaloudek5@gmail.com</a>
         </div>
-        <div class="flex sm:flex-col gap-3 p-5">
+        <div class="flex flex-col gap-3 p-5">
             <a href="https://www.linkedin.com/in/ivo-%C5%BEaloudek-18a394216/" target="_blank"><i
                     class="fa-solid fa-arrow-right fa-rotate-by text-[#62d6ad]"
                     style="--fa-rotate-angle: -45deg;"></i> LinkedIn</a>
