bento added into footer

--- a/index.html
+++ b/index.html
@@ -141,6 +141,9 @@
             <a href="https://medium.com/@izaloudek5" target="_blank"><i
                     class="fa-solid fa-arrow-right fa-rotate-by text-[#62d6ad]"
                     style="--fa-rotate-angle: -45deg;"></i> Medium</a>
+            <a href="https://bento.me/izaloudek" target="_blank"><i
+                    class="fa-solid fa-arrow-right fa-rotate-by text-[#62d6ad]"
+                    style="--fa-rotate-angle: -45deg;"></i> Bento</a>
         </div>
     </div>
 </footer>
