--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
                 height="250"
                 src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1361113128i/17255186.jpg"
                 width="250"></a>
-        <a class="book-img" href="https://www.goodreads.com/book/show/136251.Harry_Potter_and_the_Deathly_Hallows"
+        <a class="book-img" href="https://www.goodreads.com/book/show/11084145-steve-jobs"
            target="_blank"><img
-                alt="Harry Potter and deathly hallows book"
+                alt="Steve Jobs book"
                 height="250"
-                src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1663805647i/136251.jpg"
+                src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1511288482i/11084145.jpg"
                 width="250"></a>
         <a class="book-img" href="https://www.goodreads.com/book/show/53485286-lady-of-the-lake"
            target="_blank"><img
