added books index.html 2024.html

--- a/2024.html
+++ b/2024.html
@@ -39,7 +39,19 @@
                 alt="The Phoenix Project: A Novel About IT, DevOps, and Helping Your Business Win book"
                 height="250"
                 src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1361113128i/17255186.jpg"
-                width="250"></a></div>
+                width="250"></a>
+        <a class="book-img" href="https://www.goodreads.com/book/show/11084145-steve-jobs"
+           target="_blank"><img
+                alt="Steve Jobs book"
+                height="250"
+                src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1511288482i/11084145.jpg"
+                width="250"></a>
+        <a class="book-img" href="https://www.goodreads.com/book/show/25067046-lost-stars" target="_blank"><img
+                alt="Star Wars Lost Stars book"
+                height="250"
+                src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1539015804i/25067046.jpg"
+                width="250"></a>
+    </div>
 </section>
 </body>
 </html>
