--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
                 height="250"
                 src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1590429403i/53485286.jpg"
                 width="250"></a>
-        <a class="book-img" href="https://www.goodreads.com/book/show/9969571-ready-player-one" target="_blank"><img
-                alt="Ready player one book"
+        <a class="book-img" href="https://www.goodreads.com/book/show/25067046-lost-stars" target="_blank"><img
+                alt="Star Wars Lost Stars book"
                 height="250"
-                src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1500930947i/9969571.jpg"
+                src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1539015804i/25067046.jpg"
                 width="250"></a>
     </div>
 </section>
